ISSUE Text overflow #52 not sure why date is formated as phone number

--- a/front/src/styles/main.css
+++ b/front/src/styles/main.css
@@ -9,11 +9,18 @@
   --main_white: hsl(210, 20%, 98%);
   --main_accent-blue: hsl(216, 94%, 62%);
   --main_complementary: hsl(36, 95%, 63%);
-  font-size: 15px;
+
+  --main_fontSize: 15px;
+  font-size: var(--main_fontSize);
 }
 
 hr {
   color: var(--main_accent-blue);
   width: 100%;
   margin: 5px 0px;
+}
+@media screen and (max-width: 790px) {
+  :root {
+    font-size: 12px;
+  }
 }
